Declarative Resource Management /Simple-app/Service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: demo-app
  name: demo-app
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bubu
  type: ClusterIP
status:
  loadBalancer: {}
